--- a/HodgeTheory/HodgeTheory.tex
+++ b/HodgeTheory/HodgeTheory.tex
@@ -2283,7 +2283,82 @@ H^n(X,\C) = \bigoplus_{r\geq 0, a+b+2r = n}L^rH^{a,b}(X,\C)_{\mathrm{Prim}}
 \]
 we then compute the signature on each component of the direct sum, and then sum them
 together. By Theorem 10.3, we have that the form $H_n = i^nH$ induces
-the form $(-1)^{a+b}H_{n-2(a+b)}$ on $L^rH^{a+b}(X, \C)_{\mathrm{Prim}}$.
+the form $(-1)^rH_{n-2r} = (-1)^{a+b}H_{a+b}$ on
+$L^rH^{a+b}(X, \C)_{\mathrm{Prim}}$. By Proposition 10.6, the form
+\[
+\widetilde{H}_{a+b} = (-1)^{\frac{(a+b)(a+b+1)}{2}}i^{a-b-(a+b)}H_{a+b}
+\]
+is positive on $H^{a,b}_{\mathrm{Prim}}$, therefore,
+using the fact that $a+b = n-2r$, on $H^{a,b}_{\mathrm{Prim}}$, the form
+$(-1)^rH_{a+b}$ has sign
+\[
+(-1)^{r - \frac{(n-2r)(n-2r+1)}{2}}i^{-2b} =
+(-1)^{r - \frac{(n^2-2rn-2rn+4r^2+n-2r)}{2}}(-1)^{-b}
+\]
+we then note that since $n$ is even,$n^2$ and $2rn$ are both divisible by $4$, so they
+contribute nothing to the sign. Therefore, we have that
+\[
+(-1)^{r - \frac{(n^2-2rn-2rn+4r^2+n-2r)}{2}}(-1)^{-b} = (-1)^{\frac{n}{2}}(-1)^b
+= (-1)^{\frac{n}{2}}(-1)^a
+\]
+where we use the fact that $a+b = n - 2r$ is even (since $n$ is even) to conclude that
+$a$ and $B$ have the same parity. Then since $H = i^nH_n = (-1)^{\frac{n}{2}}H_n$,
+we conclude that $H$ has sign $(-1)^a$ on $L^rH^{a,b}_{\mathrm{Prim}}$. This then
+gives us
+\[
+\sigma(H) = \sum_{a+b+2r=n}(-1)^ah^{a,b}_{\mathrm{Prim}}
+\]
+We then note a simple lemma:
+%
+\begin{lem}
+For $a+b \leq n$,
+\[
+h^{a,b}_{\mathrm{Prim}} = h^{a,b} - h^{a-1,b-1}
+\]
+\end{lem}
+%
+\begin{proof}
+We again appeal to harmonic forms. Since $a+b \leq n$, the Lefschetz operator $L$ is
+injective on $\mathcal{H}^{a,b}(X)$, which is a consequence of the Hard Lefschetz
+theorem. Therefore, its adjoiht, $\Lambda$, is surjective, giving the
+short exact sequence
+\[\begin{tikzcd}
+0 \ar[r] & \mathcal{H}^{p,q}_{\mathrm{Prim}} \ar[r] & \mathcal{H}^{p,q}(X)
+\ar[r, "\Lambda"] & \mathcal{H}^{p-1,q-1}(X)
+\end{tikzcd}\]
+which proves the desired equality after appealing to the isomorphicm between
+harmonic forms and cohomology.
+\end{proof}
+%
+Using the lemma, we get that
+\begin{align*}
+\sigma(H) &= \sum_{a+b+2r=n}(-1)^ah^{a,b}_{\mathrm{Prim}} \\
+&= \sum_{a+b+2r=n}(-1)^a(h^{a,b}-h^{a-1,b-1}) \\
+&= 2 \sum_{a+b+2r=n}(-1)^ah^{a,b}
+\end{align*}
+where the last equality comes from the fact that the previous summation telescopes.
+Then using Poincar\'e duality, and the fact that $a+b = n-2r$ is even, we get that
+this is equal to
+\[
+\sum_{a+b\equiv 0~\mathrm{mod} 2} (-1)^ah^{a,b}
+\]
+We then note when $a+b$ is odd, the Hodge decomposition of $H^{a+b}(X,\C)$ is
+\[
+H^{a+b}(X,\C) = \bigoplus_{p+q=a+b, p < q}H^{p,q}(X,\C)\oplus\overline{H^{p,q}(X,\C)}
+\]
+this, along with the fact that $H^{q,p}(X,\C) = \overline{H^{p,q}(X,\C)}$, implies
+that the summation
+\[
+\sum_{a+b\equiv 1~\mathrm{mod} 2} (-1)^ah^{a,b}
+\]
+is $0$, so we have that
+\begin{align*}
+\sum_{a,b}(-1)^{a}h^{a,b} &= \sum_{a+b\equiv 0~\mathrm{mod} 2} (-1)^ah^{a,b}
++ \sum_{a+b\equiv 1~\mathrm{mod} 2} (-1)^ah^{a,b} + 0\\
+&= \sum_{a+b\equiv 0~\mathrm{mod} 2} (-1)^ah^{a,b} \\
+&= \sigma(H)
+\end{align*}
+%
 \end{proof}
 
 
