more small fixes

--- a/HodgeTheory/HodgeTheory.tex
+++ b/HodgeTheory/HodgeTheory.tex
@@ -2336,13 +2336,13 @@ h^{a,b}_{\mathrm{Prim}} = h^{a,b} - h^{a-1,b-1}
 \begin{proof}
 We again appeal to harmonic forms. Since $a+b \leq n$, the Lefschetz operator $L$ is
 injective on $\mathcal{H}^{a,b}(X)$, which is a consequence of the Hard Lefschetz
-theorem. Therefore, its adjoiht, $\Lambda$, is surjective, giving the
+theorem. Therefore, its adjoint, $\Lambda$, is surjective, giving the
 short exact sequence
 \[\begin{tikzcd}
 0 \ar[r] & \mathcal{H}^{p,q}_{\mathrm{Prim}} \ar[r] & \mathcal{H}^{p,q}(X)
-\ar[r, "\Lambda"] & \mathcal{H}^{p-1,q-1}(X)
+\ar[r, "\Lambda"] & \mathcal{H}^{p-1,q-1}(X) \ar[r] & 0
 \end{tikzcd}\]
-which proves the desired equality after appealing to the isomorphicm between
+which proves the desired equality after appealing to the isomorphism between
 harmonic forms and cohomology.
 \end{proof}
 %
